--- a/templates/pyproject.toml.jinja
+++ b/templates/pyproject.toml.jinja
@@ -3,15 +3,15 @@ requires = [ "flit_core >=3.2,<4",]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "{{ project_name }}"
+name = "{{ package_name }}"
 version = "{{ version }}"
-description = "{{ project_description }}"
+description = "{{ description }}"
 readme = "README.md"
 dependencies = [ "click", "radon", "tabulate", "toml",]
 
 [[project.authors]]
-name = "{{ author_name }}"
-email = "{{ auuthor_email}}"
+name = "{{ author }}"
+email = "{{ email }}"
 
 [project.optional-dependencies]
 dev = [ "build", "pytest", "pytest-cov", "pytest-mock", "mypy", "black", "flake8", "isort", "jinja2", "pylint",]
