--- a/templates/release.config.js.jinja2
+++ b/templates/release.config.js.jinja2
@@ -1,6 +1,6 @@
 module.exports = {
   branches: ["main"],
-  repositoryUrl: "https://github.com/ocrosby/py-cyclo",
+  repositoryUrl: "https://github.com/{{ project_owner }}/{{ project_name }}",
   upload_to_pyPI: false,
   plugins: [
     "@semantic-release/commit-analyzer",
@@ -18,7 +18,7 @@ module.exports = {
     [
       "@semantic-release/exec",
       {
-        prepareCmd: "python3 update_version.py ${nextRelease.version}",
+        prepareCmd: "python3 update_version.py.jinja2 ${nextRelease.version}",
         successCmd: "echo 'Successfully released ${nextRelease.version}'",
         publishCmd: "echo 'version_changed=true' >> $GITHUB_OUTPUT"
       }
@@ -28,10 +28,10 @@ module.exports = {
       {
         assets: [
           "CHANGELOG.md",
-          "pyproject.toml.jinja",
+          "pyproject.toml",
           "VERSION",
           "docs/source/conf.py",
-          "package.json.jinja2",
+          "package.json",
           "package-lock.json"
         ],
         message: "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
