chore: update templates and setup

--- a/templates/package.json.jinja2
+++ b/templates/package.json.jinja2
@@ -10,18 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/{{ project_owner }}/{{ project_name }}.git"
+    "url": "git+https://github.com/{{ project_owner }}/{{ module_name }}.git"
   },
-  "keywords": [
-    "astro",
-    "compute"
-  ],
-  "author": "{{ author_name }} <{{ author_email }}>",
+  "keywords": [],
+  "author": "{{ author }} <{{ email }}>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/{{ project_owner }}/{{ project_name }}/issues"
+    "url": "https://github.com/{{ project_owner }}/{{ module_name }}/issues"
   },
-  "homepage": "https://github.com/{{ project_owner }}/{{ project_name }}#readme",
+  "homepage": "https://github.com/{{ project_owner }}/{{ module_name }}#readme",
   "devDependencies": {
     "@babel/code-frame": "^7.26.2",
     "@babel/helper-validator-identifier": "^7.25.9",
