docs(readme): update template documentation

--- a/templates/pyproject.toml.jinja2
+++ b/templates/pyproject.toml.jinja2
@@ -14,7 +14,7 @@ name = "{{ author }}"
 email = "{{ email }}"
 
 [project.optional-dependencies]
-dev = [ "build", "pytest", "pytest-cov", "pytest-mock", "mypy", "black", "flake8", "isort", "jinja2", "pylint",]
+dev = [ "build", "py-cyclo", "pytest", "pytest-cov", "pytest-mock", "mypy", "black", "flake8", "isort", "jinja2", "pylint",]
 
 [project.scripts]
 hello = "hello.main:main"
