--- a/templates/.github/workflows/python-checks.yml.jinja2
+++ b/templates/.github/workflows/python-checks.yml.jinja2
@@ -1,6 +1,12 @@
 name: Python Checks
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - 'feature/**'
+      - 'bugfix/**'
+      - 'hotfix/**'
+  workflow_dispatch:
 
 jobs:
   checks:
