refactor: replace jinja2 delimiters with [[ ]]

--- a/templates/README.md.jinja2
+++ b/templates/README.md.jinja2
@@ -1,6 +1,6 @@
-# {{ project_name }}
+# [[ project_name ]]
 
-{{ description }}
+[[ description ]]
 
 ## Installation
 
@@ -35,7 +35,7 @@ invoke test
 
 ## License
 
-This project is licensed under the {{ license }} license.
+This project is licensed under the [[ license ]] license.
 
 ## Acknowledgments
 
@@ -43,8 +43,8 @@ Todo: Add acknowledgments here.
 
 ## Contact
 
-Maintainer: {{ author }}
-Email: {{ email }}
+Maintainer: [[ author ]]
+Email: [[ email ]]
 
 ## References
 
