--- a/templates/release.config.js.jinja2
+++ b/templates/release.config.js.jinja2
@@ -1,6 +1,6 @@
 module.exports = {
   branches: ["main"],
-  repositoryUrl: "https://github.com/{{ project_owner }}/{{ project_name }}",
+  repositoryUrl: "https://github.com/[[ project_owner ]]/[[ project_name ]]",
   upload_to_pyPI: false,
   plugins: [
     "@semantic-release/commit-analyzer",
