--- a/templates/src/app/main.py.jinja2
+++ b/templates/src/app/main.py.jinja2
@@ -1,11 +1,8 @@
-"""Main entry point for the {{ project_name }} application."""
+"""Main entry point for the [[ project_name ]] application."""
 
 def main():
     """Main function to run the application."""
-    print("Welcome to {{ project_name }}!")
-    print("Description: {{ description }}")
-    print("Author: {{ author }}")
-    print("License: {{ license }}")
-
-if __name__ == "__main__":
-    main()
+    print("Welcome to [[ project_name ]]!")
+    print("Description: [[ description ]]")
+    print("Author: [[ author ]]")
+    print("License: [[ license ]]")
