--- a/templates/.github/workflows/release.yml.jinja2
+++ b/templates/.github/workflows/release.yml.jinja2
@@ -72,7 +72,7 @@ jobs:
         shell: bash
 
       - name: Configure Git Safe Directory
-        run: git config --global --add safe.directory /__w/{{ module_name }}/{{ module_name }}
+        run: git config --global --add safe.directory /__w/[[ module_name ]]/[[ module_name ]]
 
       - name: Run Semantic Release
         id: semantic_release
