--- a/templates/.pylintrc.jinja2
+++ b/templates/.pylintrc.jinja2
@@ -1,5 +1,5 @@
 [MASTER]
-ignore=.venv,templates/tasks.py.jinja2
+ignore=.venv
 
 [MESSAGES CONTROL]
-disable=C0114,C0115,C0116,R0801
+disable = redefined-outer-name,R0913,R0917,W0613,W1203,W0718,R0914,R0915,C0114,C0115,C0116,R1702,R0903,R0801,E0110,E0611,C0301
