--- a/templates/package.json.jinja2
+++ b/templates/package.json.jinja2
@@ -1,7 +1,7 @@
 {
-  "name": "{{ project_name }}",
-  "version": "{{ version }}",
-  "description": "{{ project_description }}",
+  "name": "[[ project_name ]]",
+  "version": "[[ version ]]",
+  "description": "[[ project_description ]]",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/{{ project_owner }}/{{ module_name }}.git"
+    "url": "git+https://github.com/[[ project_owner ]]/[[ module_name ]].git"
   },
   "keywords": [],
-  "author": "{{ author }} <{{ email }}>",
+  "author": "[[ author ]] <[[ email ]]>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/{{ project_owner }}/{{ module_name }}/issues"
+    "url": "https://github.com/[[ project_owner ]]/[[ module_name ]]/issues"
   },
-  "homepage": "https://github.com/{{ project_owner }}/{{ module_name }}#readme",
+  "homepage": "https://github.com/[[ project_owner ]]/[[ module_name ]]#readme",
   "devDependencies": {
     "@babel/code-frame": "^7.26.2",
     "@babel/helper-validator-identifier": "^7.25.9",
