--- a/templates/pytest.ini.jinja2
+++ b/templates/pytest.ini.jinja2
@@ -1,5 +1,5 @@
 [pytest]
 minversion = 6.0
-addopts = --verbose --tb=short --cov={{ package_name }} --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=87 --junitxml=junit.xml
+addopts = --verbose --tb=short --cov=[[ package_name ]] --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=87 --junitxml=junit.xml
 testpaths =
     tests
